UPF-2310: Login with Mobile on Otp screen mobile number will be visible Fix : mnl new email login issue produce after merging Fix: dropdown arrow of mobile number UI issue

--- a/src/mobile-number-login/mobile-number-login.css
+++ b/src/mobile-number-login/mobile-number-login.css
@@ -170,8 +170,8 @@
 }
 .signIn .dateSlct {
     position: absolute;
-    left: 10px;
-    top: 13px;
+    left: 20px;
+    top: 11px;
 }
 .signIn .dateSlct select {
     border: 0;
